fixed styling page-header, because the width was not responsive

--- a/app/styles/app/ladda.scss
+++ b/app/styles/app/ladda.scss
@@ -475,7 +475,7 @@ $spinnerSize: 32px;
 }
 
 .page-header {
-  width: 97%;
+  //width: 97%;
   .ladda-button {
     float: right;
     margin-top: 26px;
